kubernetes/apps/network/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: network
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
  annotations:
    linkerd.io/inject: enabled
