kubernetes/apps/network/peer-auth-policy.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: disable-mtls
  namespace: network
spec:
  mtls:
    mode: DISABLE
